--- a/src/components/orders/Order.css
+++ b/src/components/orders/Order.css
@@ -1,1 +1,51 @@
-here 
+.orders {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 3rem;
+  }
+
+  .orders>* {
+    flex-basis: 31%;
+    margin: 0.5rem;
+  }
+
+  section.order {
+    margin: 3rem;
+  }
+
+  .order-details {
+    margin: 3rem 10rem 10rem 10rem;
+  }
+
+  .save-btn {
+    float: right;
+    background-color: var(--primary);
+  }
+
+  .order {
+    background-color: var(--white);
+    border: 1px solid var(--outline);
+    border-radius: 0.5rem;
+    padding: 1rem;
+    box-shadow: 1px 2px 5px lightgray;
+  }
+
+  .order:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-color: var(--primary);
+  }
+
+  .order-info {
+    color: var(--info);
+    font-family: "Roboto", sans-serif;
+  }
+
+  .order-header {
+    font-size: larger;
+    font-weight: 700;
+    line-height: 3rem;
+    color: var(--primary);
+  }
