added input fields in order to update employeedetails view

--- a/src/components/employees/EmployeeDetails.css
+++ b/src/components/employees/EmployeeDetails.css
@@ -17,3 +17,8 @@
     line-height: 3rem;
     color: var(--primary);
   }
+
+  .save-btn {
+    float: right;
+    background-color: var(--primary);
+  }
